--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Push to Harbor
         run: |
-          docker tag ffmpeg:latest harbor1.suanleme.cn/ff4d6pgf/ffmpeg:gpu
+          docker tag ffmpeg:gpu harbor1.suanleme.cn/ff4d6pgf/ffmpeg:gpu
           docker push harbor1.suanleme.cn/ff4d6pgf/ffmpeg:gpu
