--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ffmpeg:gpu .
+          docker build -t ffmpeg:checkgpu .
 
       - name: Push to Harbor
         run: |
-          docker tag ffmpeg:gpu harbor1.suanleme.cn/ff4d6pgf/ffmpeg:gpu
-          docker push harbor1.suanleme.cn/ff4d6pgf/ffmpeg:gpu
+          docker tag ffmpeg:checkgpu harbor1.suanleme.cn/ff4d6pgf/ffmpeg:checkgpu
+          docker push harbor1.suanleme.cn/ff4d6pgf/ffmpeg:checkgpu
